--- a/styles.css
+++ b/styles.css
@@ -109,6 +109,7 @@ body {
     margin: 0;
     list-style-type: disc;
 }
+
 .text-box ul li {
     font-size: 20px;
 }
@@ -124,47 +125,70 @@ body {
     max-width: 500px;
     margin: auto;
     margin-top: 5rem;
-  }
+}
 
-  .form-group {
+.form-group {
     margin-bottom: 15px;
-  }
+}
 
-  .form-group label {
+.form-group label {
     display: block;
     margin-bottom: 5px;
     font-weight: bold;
-  }
+}
 
-  .form-group input,
-  .form-group textarea {
+.form-group input,
+.form-group textarea {
     width: 100%;
     padding: 8px;
     box-sizing: border-box;
     border: 1px solid #ccc;
     border-radius: 5px;
-  }
+}
 
-  .form-group textarea {
+.form-group textarea {
     resize: vertical;
     height: 100px;
-  }
+}
 
-  .form-group input[type="submit"] {
+.form-group input[type="submit"] {
     background-color: #333;
     color: white;
     border: none;
     cursor: pointer;
     padding: 10px 20px;
     border-radius: 5px;
-  }
+}
 
-  .form-group input[type="submit"]:hover {
+.form-group input[type="submit"]:hover {
     background-color: #555;
-  }
+}
 
-  .error {
+.error {
     color: red;
     font-size: 14px;
     margin-top: 5px;
-  }
+}
+
+.table-container {
+    display: flex;
+    justify-content: center;
+}
+
+table {
+    width: 50%;
+    border-collapse: collapse;
+    margin: 25px 0;
+    font-size: 18px;
+    text-align: left;
+}
+
+th,
+td {
+    padding: 12px;
+    border-bottom: 1px solid #ddd;
+}
+
+th {
+    background-color: #f2f2f2;
+}
